--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,8 +11,7 @@
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.0.14",
-    "socket.io-client": "2.0.4",
-    "text-diff": "1.0.1"
+    "socket.io-client": "2.0.4"
   },
   "devDependencies": {},
   "scripts": {
